# seven_segment_display

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
seven_segment_display/: __main__.py  config.py  digit.py  digit_display.py  display.py  main.py
